--- a/style.css
+++ b/style.css
@@ -101,14 +101,11 @@ input:focus {
   border: 2px solid blue;
 }
 
-.registration-form__input {
-}
-
 .registration-form__btn {
   padding: 1.5em 0 0 2em;
 }
 
-.registration-form__btn button {
+.btn {
   color: #fff;
   background: var(--green);
   border-radius: 10px;
@@ -119,7 +116,7 @@ input:focus {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.registration-form__btn button:hover {
+.btn:hover {
   background: var(--dark-green);
 }
 
@@ -137,6 +134,17 @@ a:hover {
   color: var(--dark-green);
 }
 
+/* Error class for passwords */
+.error {
+  outline: none;
+  border: 2px solid red;
+}
+
+.error-message {
+  color: red;
+  font-size: 0.7rem;
+}
+
 @media screen and (min-width: 800px) {
   .img {
     width: 70%;
@@ -147,5 +155,3 @@ a:hover {
     font-size: 0.8rem;
   }
 }
-
-/* input[type="password"] */
